--- a/javaCodeTest/pom.xml
+++ b/javaCodeTest/pom.xml
@@ -20,7 +20,11 @@
 
     <dependencies>
 
-
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
