--- a/toolTest/pom.xml
+++ b/toolTest/pom.xml
@@ -26,6 +26,11 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.76</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
