--- a/toolTest/pom.xml
+++ b/toolTest/pom.xml
@@ -29,14 +29,14 @@
 
         <dependency>
             <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
+            <artifactId>fastjson</artifactId>x
             <version>1.2.76</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>30.1.1-jre</version>
+            <version>31.1-jre</version>
         </dependency>
 
         <dependency>
