:truck: :chart_with_upwards_trend: :triangular_flag_on_post:

--- a/toolTest/pom.xml
+++ b/toolTest/pom.xml
@@ -29,7 +29,7 @@
 
         <dependency>
             <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>x
+            <artifactId>fastjson</artifactId>
             <version>1.2.76</version>
         </dependency>
 
@@ -37,6 +37,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>31.1-jre</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
         </dependency>
 
         <dependency>
