--- a/toolTest/pom.xml
+++ b/toolTest/pom.xml
@@ -14,6 +14,7 @@
         <module>joda-time</module>
         <module>jwt-test</module>
         <module>okhttp</module>
+        <module>spring</module>
     </modules>
 
     <packaging>pom</packaging>
