:building_construction: :technologist: :page_facing_up:

--- a/toolTest/pom.xml
+++ b/toolTest/pom.xml
@@ -15,6 +15,7 @@
         <module>jwt-test</module>
         <module>okhttp</module>
         <module>spring</module>
+        <module>groovyTest</module>
     </modules>
 
     <packaging>pom</packaging>
