--- a/toolTest/groovyTest/pom.xml
+++ b/toolTest/groovyTest/pom.xml
@@ -4,8 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.zsx</groupId>
+    <parent>
+        <artifactId>toolTest</artifactId>
+        <groupId>com.zsx</groupId>
+        <version>1.0.0-demo</version>
+    </parent>
+
     <artifactId>groovyTest</artifactId>
+
     <version>1.0.0-demo</version>
 
     <dependencies>
