--- a/toolTest/groovyTest/pom.xml
+++ b/toolTest/groovyTest/pom.xml
@@ -21,6 +21,14 @@
             <version>2.5.17</version>
             <type>pom</type>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>4.3.25.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
