--- a/toolTest/pom.xml
+++ b/toolTest/pom.xml
@@ -17,6 +17,7 @@
         <module>spring</module>
         <module>groovyTest</module>
         <module>common</module>
+        <module>hutool</module>
     </modules>
 
     <packaging>pom</packaging>
