--- a/toolTest/common/pom.xml
+++ b/toolTest/common/pom.xml
@@ -7,6 +7,22 @@
         <version>1.0.0-demo</version>
     </parent>
     <artifactId>common</artifactId>
-    <name>Archetype - common</name>
-    <url>http://maven.apache.org</url>
+
+    <!--  拼音  -->
+    <dependencies>
+        <dependency>
+            <groupId>com.github.promeg</groupId>
+            <artifactId>tinypinyin</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+
+
+
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.5.17</version>
+            <type>pom</type>
+        </dependency>
+    </dependencies>
 </project>
