--- a/toolTest/common/pom.xml
+++ b/toolTest/common/pom.xml
@@ -8,8 +8,9 @@
     </parent>
     <artifactId>common</artifactId>
 
-    <!--  拼音  -->
     <dependencies>
+
+        <!--  拼音  -->
         <dependency>
             <groupId>com.github.promeg</groupId>
             <artifactId>tinypinyin</artifactId>
@@ -17,7 +18,17 @@
         </dependency>
 
 
+        <!-- JSON XPath库，读取JSON的java DSL-->
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.8.0</version>
+        </dependency>
 
+
+        <!---->
+        <!---->
+        <!---->
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
