--- a/toolTest/kryo-test/pom.xml
+++ b/toolTest/kryo-test/pom.xml
@@ -22,6 +22,13 @@
             <artifactId>kryo-serializers</artifactId>
             <version>0.42</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.furyio</groupId>
+            <artifactId>fury-core</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
