--- a/toolTest/aviatorScript/pom.xml
+++ b/toolTest/aviatorScript/pom.xml
@@ -2,22 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>toolTest</artifactId>
         <groupId>com.zsx</groupId>
+        <artifactId>toolTest</artifactId>
         <version>1.0.0-demo</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jwtTest</artifactId>
-
-
+    <artifactId>aviatorScript</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.auth0</groupId>
-            <artifactId>java-jwt</artifactId>
-            <version>3.10.3</version>
+            <groupId>com.googlecode.aviator</groupId>
+            <artifactId>aviator</artifactId>
+            <version>5.3.3</version>
         </dependency>
     </dependencies>
 
