--- a/toolTest/pom.xml
+++ b/toolTest/pom.xml
@@ -18,6 +18,7 @@
         <module>groovyTest</module>
         <module>common</module>
         <module>hutool</module>
+        <module>aviatorScript</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -28,6 +29,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
