--- a/toolTest/pom.xml
+++ b/toolTest/pom.xml
@@ -19,6 +19,7 @@
         <module>common</module>
         <module>hutool</module>
         <module>aviatorScript</module>
+        <module>agentTest</module>
     </modules>
 
     <packaging>pom</packaging>
