--- a/java11project/pom.xml
+++ b/java11project/pom.xml
@@ -16,6 +16,18 @@
 
 
   <dependencies>
+
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+<!--      <version>1.16.22</version>-->
+<!--      <version>1.18.0</version>-->
+      <version>1.18.32</version>
+    </dependency>
+
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
