--- a/toolTest/common/pom.xml
+++ b/toolTest/common/pom.xml
@@ -44,5 +44,13 @@
             <version>1.5.6-3</version>
         </dependency>
 
+
+        <!-- 压缩归档java库 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.26.2</version>
+        </dependency>
+
     </dependencies>
 </project>
