--- a/toolTest/spring/pom.xml
+++ b/toolTest/spring/pom.xml
@@ -19,6 +19,18 @@
             <version>4.3.25.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.3.31</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-expression</artifactId>
+            <version>5.2.5.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 </project>
