--- a/toolTest/common/pom.xml
+++ b/toolTest/common/pom.xml
@@ -59,5 +59,12 @@
             <version>3.1.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.11.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
