--- a/toolTest/spring/pom.xml
+++ b/toolTest/spring/pom.xml
@@ -21,6 +21,12 @@
 
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.5.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>5.3.31</version>
         </dependency>
@@ -30,6 +36,9 @@
             <artifactId>spring-expression</artifactId>
             <version>5.2.5.RELEASE</version>
         </dependency>
+
+
+
 
     </dependencies>
 
